--- a/http_1/package.json
+++ b/http_1/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/app.js"
   },
   "dependencies": {
-    "http-string-parser": "^0.0.6"
+    "http-string-parser": "^0.0.6",
+    "mime-types": "^2.1.24"
   }
 }
