--- a/http_1/package.json
+++ b/http_1/package.json
@@ -4,10 +4,15 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/app.js"
+    "start": "node ./src/app.js",
+    "test": "mocha -exit ./tests/client.js"
   },
   "dependencies": {
     "http-string-parser": "^0.0.6",
     "mime-types": "^2.1.24"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
   }
 }
