--- a/http_1/package.json
+++ b/http_1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "http_1-learn",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
     "start": "node ./examples/app.js",
